modal not being called correctly?  still appears behind modal transparency.

--- a/css/busfinder.css
+++ b/css/busfinder.css
@@ -490,7 +490,6 @@ Modal Disclaimer
 .modal {
 	border-radius: 0px;
 	z-index: 9999;
-	position: relative;
 }
 
 .modal h3 {
